--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,9 @@
 <%- include('partials/header') %>
 
+<% if (locals.err) { %>
+  <p>error</p>
+<% } %>
+
 <div class="container">
   <h1>Welcome Back</h1>
 
