--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -44,39 +44,11 @@
 
     </div>
 
-    <section>
-      <!-- .logs*5>((.fbar>.prot*3)+(.fimg>img)+er+(.finfo>(.up>p{chicken}+button{100g}+.opt>button)+(.down>.fcal>p{365cal}^.fmacros>.p{28p}+.f{7f}+.c{0c}))) -->
-      
-      <!-- <div class="logs" id="chicken">
-        <div class="fbar">
-          <div class="prot"></div>
-          <div class="fats"></div>
-          <div class="carbs"></div>
-        </div>
-        <div class="fimg"><img src="" alt=""></div>
-        <div class="vert-row"></div>
-        <div class="finfo">
-          <div class="up">
-            <p>Chicken</p>
-            <button class="fg">100g</button>
-            <div class="opt"><button></button></div>
-          </div>
-          <div class="down">
-            <div class="fcal">
-              <p>365cal</p>
-            </div>
-            <div class="fmacros">
-              <div class="p"><p>28p</p></div>
-              <div class="f"><p>12f</p></div>
-              <div class="c"><p>0c</p></div>
-            </div>
-          </div>
-        </div>
-      </div> -->
+    <section>   
       
       <% if (locals.foods) foods.forEach(obj => { %>
 
-        <div class="logs" id="N<%= obj.id %>">
+        <div class="logs card" id="N<%= obj.id %>">
           <div class="fimg"><img src="/icons/<%= obj.icon %>" alt="food image" width="100%"></div>
           <div class="vert-row"></div>
           <div class="finfo">
@@ -108,12 +80,15 @@
         </div>
 
       <%}); if (foods.length == 0) {%>
-        <h1>You have no entries</h1>
-      <% } %>
-
-    </section>
+        <h1 style="text-align:center;">You have no entries</h1>
+        <div id="edit-form-container">
+          <img id="empty-logs" src="/icons/no-task.png" />
+        </div>
+        <% } %>
+        
+      </section>
   </div>
-
+  
   <%- include('partials/navbar') %>
   
   
@@ -125,6 +100,17 @@
   
   <script>
     
+    const user = {
+      weight: parseFloat(`<%= info.weight %>`),
+      height: parseFloat(`<%= info.height %>`),
+      activity: `<%= info.act %>`,
+      gender: `<%= info.gend %>`,
+      goal: `<%= info.goa %>`,
+      birth: parseInt(`<%= info.birth_year %>`),
+    }
+
+    const foodData = <%- JSON.stringify(foods) %>;
+
     const progressCircle = document.querySelector('#circle');
     const calories = document.querySelector('#circle p');
     const prot = document.querySelector('#total-macros #protein .progress');
@@ -135,34 +121,22 @@
     const carbshtml = document.querySelector('#carbs p:last-child');
     
     //Sum macros and cal
-    const  logCal = document.querySelectorAll('.fcal p');
     var sumCal = 0;
-    logCal.forEach(p => {
-      sumCal += parseInt(p.innerHTML.match(/\d+/)[0])
-    });
-    const  logProt = document.querySelectorAll('.fmacros .p p');
     var sumProt = 0;
-    logProt.forEach(p => {
-      sumProt += parseInt(p.innerHTML.match(/\d+/)[0])
-    });
-    const logFat = document.querySelectorAll('.fmacros .f p');
     var sumFat = 0;
-    logFat.forEach(p => {
-      sumFat += parseInt(p.innerHTML.match(/\d+/)[0])
-    });
-    const  logCarb = document.querySelectorAll('.fmacros .c p');
     var sumCarb = 0;
-    logCarb.forEach(p => {
-      sumCarb += parseInt(p.innerHTML.match(/\d+/)[0])
+    foodData.forEach(obj => {
+      sumCal += Math.round(obj.cal*obj.gr/100);
+      sumProt += Math.round(obj.prot*obj.gr/100);
+      sumFat += Math.round(obj.fat*obj.gr/100);
+      sumCarb += Math.round(obj.carb*obj.gr/100);
     });
+    
 
-    const caloriesG = 2600;
+    const caloriesG =  calcUserCalories(user);
+    const goal = calcUserMacros(user);
+
     const caloriesP = ((sumCal*100)/caloriesG);
-    const goal = {
-      protein: 200,
-      fats: 90,
-      carbs: 200
-    }
     const percentage = {
       protein: ((sumProt*100)/goal.protein),
       fats: ((sumFat*100)/goal.fats),
@@ -174,14 +148,17 @@
     progressCircle.style.background = conicGradient;
     calories.innerHTML = `${sumCal} cal <br /> <span>/${caloriesG}</span>`;
 
+    //calc macro progress bars
     prot.style.width = `${percentage.protein}%`;
     fats.style.width = `${percentage.fats}%`;
     carbs.style.width = `${percentage.carbs}%`;
 
+    //Update macros goal
     prothtml.innerHTML = `${sumProt} gr <small> /${goal.protein}</small>`;
     fatshtml.innerHTML = `${sumFat} gr <small> /${goal.fats}</small>`;
     carbshtml.innerHTML = `${sumCarb} gr <small> /${goal.carbs}</small>`;
 
+    //Update overflowed macros colors
     if (percentage.protein>=120) {
       prot.style.background = "#ff000079";
       prot.style.boxShadow = "0 0 5px #ff000079";
@@ -194,7 +171,7 @@
       carbs.style.background = "#ff000079";
       carbs.style.boxShadow = "0 0 5px #ff000079";
     };
-    if (caloriesP>=120) {
+    if (sumCal - caloriesG>=500) {
       progressCircle.style.background = "#ff000079";
       progressCircle.style.boxShadow = "0 0 10px #ff000079";
     }
@@ -222,7 +199,75 @@
         btn.style.display = "block";
       }
     }
-    
+
+    function calcUserCalories(user) {
+      
+      var bmr
+      if (user.gender=="MALE") {
+        bmr = 88.362 + (13.4 * user.weight) + (4.8 * user.height) - (5.677 * (new Date().getFullYear() - user.birth)) ;
+      } else {
+        bmr = 447.593 + (9.247 * user.weight) + (3.1 * user.height) - (4.33 * (new Date().getFullYear() - user.birth)) ;
+      }
+      
+      var cal;
+      
+      switch (user.activity) {
+        case "SEDENTARY":
+          cal = bmr * 1.2
+        break;
+        case "LIGHTLY ACTIVE":
+          cal = bmr * 1.375;
+        break;
+        case "MODERATELY ACTIVE":
+          cal = bmr * 1.55;
+        break;
+        case "VERY ACTIVE":
+          cal = bmr * 1.725;
+        break;
+        case "SUPER ACTIVE":
+          cal = bmr * 1.9;
+        break;
+        
+        default:
+          cal = bmr * 0;
+          break;
+        }
+        
+        if (user.goal=="LOSE FAT") {
+          cal -= 500;
+        } else if (user.goal=="GAIN MUSCLE") {
+          cal += 500;
+        }
+
+      return Math.round(cal/10)*10;
+
+    }
+
+    function calcUserMacros(user) {
+      
+      const goal = {
+        protein: Math.round(caloriesG * 0.25 / 4),
+        fats: Math.round(caloriesG * 0.25 / 9),
+        carbs: Math.round(caloriesG * 0.25 / 4),
+      }
+
+      if (user.goal=="LOSE FAT") {
+          goal.protein = Math.round(caloriesG * 0.35 / 4);
+          goal.fats = Math.round(caloriesG * 0.25 / 9);
+          goal.carbs = Math.round(caloriesG * 0.4 / 4);
+        } else if (user.goal=="GAIN MUSCLE") {
+          goal.protein = Math.round(caloriesG * 0.25 / 4);
+          goal.fats = Math.round(caloriesG * 0.25 / 9);
+          goal.carbs = Math.round(caloriesG * 0.5 / 4);
+
+        }
+
+      return goal
+    }
+
+
+    // console.table(user);
+
 
   </script>
 
