--- a/views/history.ejs
+++ b/views/history.ejs
@@ -1,18 +1,11 @@
 <%- include('partials/header') %>
 
 <div id="history-page">
-    <header>
 
-        <div class="upper">
-            <h1>History</h1>
-        
-            <button id="calendar-btn"></button>
+    <h1 class="header">History</h1>
     
-            <a href="/premium" title="check out our premium plan!"><img id="crown" src="/icons/crown.png" /></a>    
-        </div>
-
+    <a href="/premium" title="check out our premium plan!"><img id="crown" src="/icons/crown.png" /></a>
         
-    </header>
     
     <div id="days">
         <p>Mon</p>
