--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,11 +8,11 @@
           <form action="/register" method="POST">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
+              <input type="email" class="form-control" name="username" required>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" class="form-control" name="password" pattern=".{8,}" title="minimum 8 characters" required>
             </div>
             <button type="submit" class="btn btn-dark">Register</button>
           </form>
