--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -134,6 +134,7 @@
 
     <footer id="log-out-cont">
         <a href="/logout" id="log-out">Log Out</a>
+        <small> <%= info.email %> </small>
         <small>completed days: 5</small>
         <small>Copyright <%= date.getFullYear() %></small>
     </footer>
