--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" pattern=".{8,}" title="minimum 8 characters" required>
+              <input type="password" class="form-control" name="password" pattern=".{8,}" title=" 8 characters minimum" required>
             </div>
             <button type="submit" class="btn btn-dark">Register</button>
           </form>
