Mindnight resets USER_FOODS table, food cal and macros are now tracked in USER_HISTORY table

--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -126,6 +126,7 @@
     var sumFat = 0;
     var sumCarb = 0;
     foodData.forEach(obj => {
+      console.log(obj.cal*obj.gr/100);
       sumCal += Math.round(obj.cal*obj.gr/100);
       sumProt += Math.round(obj.prot*obj.gr/100);
       sumFat += Math.round(obj.fat*obj.gr/100);
@@ -265,8 +266,9 @@
       return goal
     }
 
+    console.table(user);
 
-    // console.table(user);
+    console.log(new Date().toISOString().slice(0,10));
 
 
   </script>
